# variation-normalization

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  Dockerfile  LICENSE  Pipfile  Procfile  README.md  WSGI.py  docker-compose.yaml  docker-compose.yml  environment.yml  kori.ipynb  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  uta-setup.sql  uwsgi.ini
.ebextensions/: 00sample_log.config  01_download_data.config  01_download_seqrepo.config  01_gene_dymbol_download.config  02_download_seqrepo.config
.github/workflows/: checks.yaml  checks.yml  close_issue.yml  github-actions.yml  release.yml
analysis/: MANE Transcript Scratch.ipynb  MANE Transcript.ipynb  vrs-python normalization.ipynb
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
docs/: hgvs_dup_del_mode.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst
frontend/: .env  .env.development  .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.tsx
src/variation/: __init__.py  classify.py  gnomad_vcf_to_protein_variation.py  hgvs_dup_del_mode.py  log_config.py  main.py  normalize.py  query.py  regex.py  to_copy_number_variation.py  to_vrs.py  tokenize.py  translate.py  utils.py  validate.py  version.py  vrs_representation.py
tests/: __init__.py  conftest.py  test_canonical_spdi_to_categorical_variation.py  test_classifier.py  test_codon_table.py  test_gnomad_vcf_to_protein.py  test_hgvs_dup_del_mode.py  test_hgvs_to_copy_number.py  test_mane_transcript.py  test_mane_transcript_mappings.py  test_normalize.py  test_parsed_to_abs_cnv.py  test_to_canonical_variation.py  test_tokenizer.py  test_translator.py  test_validator.py
tests/classifiers/: __init__.py  classifier_base.py  test_amino_acid_deletion.py  test_amino_acid_delins.py  test_amino_acid_insertion.py  test_amino_acid_substitution.py  test_amplification.py  test_classifier.py  test_coding_dna_deletion.py  test_coding_dna_delins.py  test_coding_dna_insertion.py  test_coding_dna_silent_mutation.py  test_coding_dna_substitution.py  test_dna_coding_substitution.py  test_fusion.py  test_genomic_copy_number_loss.py  test_genomic_deletion.py  test_genomic_deletion_range.py  test_genomic_delins.py  test_genomic_duplication.py  test_genomic_insertion.py  test_genomic_silent_mutation.py  test_genomic_substitution.py  test_genomic_uncertain_deletion.py  test_polypeptide_truncation.py  test_protein_deletion.py  test_protein_delins.py  test_protein_insertion.py  test_protein_substitution.py  test_silent_mutation.py
tests/fixtures/: classifiers.yml  tokenizers.yml  translators.yml  validators.yml
tests/to_copy_number_variation/: test_amplification_to_cx_var.py  test_amplification_to_rel_cnv.py  test_hgvs_to_copy_number.py  test_parsed_to_abs_cnv.py  test_parsed_to_cn_var.py  test_parsed_to_copy_number.py  test_parsed_to_cx_var.py
tests/tokenizers/: __init__.py  test_amino_acid_deletion.py  test_amino_acid_delins.py  test_amino_acid_insertion.py  test_amino_acid_substitution.py  test_amplification.py  test_cdna_deletion.py  test_cdna_delins.py  test_cdna_insertion.py  test_cdna_reference_agree.py  test_cdna_substitution.py  test_coding_dna_deletion.py  test_coding_dna_delins.py  test_coding_dna_insertion.py  test_coding_dna_reference_agree.py  test_coding_dna_silent_mutation.py  test_coding_dna_substitution.py  test_fusion.py  test_gene.py  test_gene_pair.py  test_gene_symbol.py  test_genomic_copy_number_loss.py  test_genomic_deletion.py  test_genomic_deletion_ambiguous.py  test_genomic_deletion_range.py  test_genomic_delins.py  test_genomic_duplication.py  test_genomic_duplication_ambiguous.py  test_genomic_duplication_range.py  test_genomic_insertion.py  test_genomic_reference_agree.py  test_genomic_silent_mutation.py  test_genomic_substitution.py  test_genomic_uncertain_deletion.py  test_gnomad_vcf.py  test_hgvs.py  test_locus_reference_genomic.py  test_polypeptide_truncation.py  test_protein_deletion.py  test_protein_delins.py  (+7 more)
tests/translators/: __init__.py  genomic_insertion.py  test_amino_acid_deletion.py  test_amino_acid_delins.py  test_amino_acid_insertion.py  test_amino_acid_substitution.py  test_cdna_deletion.py  test_cdna_delins.py  test_cdna_insertion.py  test_cdna_silent_mutation.py  test_cdna_substitution.py  test_coding_dna_deletion.py  test_coding_dna_delins.py  test_coding_dna_insertion.py  test_coding_dna_silent_mutation.py  test_coding_dna_substitution.py  test_genomic_deletion.py  test_genomic_delins.py  test_genomic_duplication.py  test_genomic_insertion.py  test_genomic_silent_mutation.py  test_genomic_substitution.py  test_genomic_uncertain_deletion.py  test_polypeptide_truncation.py  test_protein_deletion.py  test_protein_delins.py  test_protein_insertion.py  test_protein_reference_agree.py  test_protein_substitution.py  test_silent_mutation.py  translator_base.py
tests/validators/: __init__.py  test_amino_acid_deletion.py  test_amino_acid_delins.py  test_amino_acid_insertion.py  test_amino_acid_substitution.py  test_amino_cid_insertion.py  test_cdna_deletion.py  test_cdna_delins.py  test_cdna_insertion.py  test_cdna_reference_agree.py  test_cdna_subsitution.py  test_coding_dna_deletion.py  test_coding_dna_delins.py  test_coding_dna_insertion.py  test_coding_dna_reference_agree.py  test_coding_dna_silent_mutation.py  test_coding_dna_subsitution.py  test_genomic_deletion.py  test_genomic_delins.py  test_genomic_duplication.py  (+11 more)
variant/: __init__.py  __version__.py  main.py  mane_transcript.py  normalize.py  to_vrs.py
variation/: __init__.py  base.py  classify.py  gnomad_vcf_to_protein_variation.py  hgvs_dup_del_mode.py  hgvs_dup_del_mode_readme.md  main.py  mane_transcript.py  normalize.py  query.py  regex.py  to_canonical_variation.py  to_copy_number_variation.py  to_vrs.py  to_vrsatile.py  tokenize.py  translate.py  utils.py  validate.py  version.py  vrs.py  vrs_representation.py
varlexapp/: __init__.py  __version__.py  tokenize.py
(+609 files in other folders)
