[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.ruff]
lint.select = [
  "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "E", "W",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "I",  # https://docs.astral.sh/ruff/rules/#isort-i
  "N",  # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "D",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "S",  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "A",  # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "C4",  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "DTZ",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "T10",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "EM",  # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "G",  # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
  "PIE",  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "T20",  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "PT",  # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "Q",  # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
  "RSE",  # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
  "RET",  # https://docs.astral.sh/ruff/rules/#flake8-return-ret
  "SIM",  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "PTH",  # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "PGH",  # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
  "RUF",  # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

lint.fixable = [
  "I",
  "F401",
  "D",
  "UP",
  "ANN",
  "B",
  "C4",
  "G",
  "PIE",
  "PT",
  "RSE",
  "SIM",
  "RUF"
]
# ANN101 - missing-type-self
# ANN003 - missing-type-kwargs
# D203 - one-blank-line-before-class
# D205 - blank-line-after-summary
# D206 - indent-with-spaces*
# D213 - multi-line-summary-second-line
# D300 - triple-single-quotes*
# D400 - ends-in-period
# D415 - ends-in-punctuation
# E111 - indentation-with-invalid-multiple*
# E114 - indentation-with-invalid-multiple-comment*
# E117 - over-indented*
# E501 - line-too-long*
# W191 - tab-indentation*
# PGH003 - blanket-type-ignore
# *ignored for compatibility with formatter
lint.ignore = [
  "ANN101", "ANN003",
  "D203", "D205", "D206", "D213", "D300", "D400", "D415",
  "E111", "E114", "E117", "E501",
  "W191",
  "PGH003",
  "S321",
]

exclude = [
  "setup.py"
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# ANN201 - Missing type annotation
# ANN102 - missing-type-cls
# N805 - invalid-first-argument-name-for-method
# S101 - assert
# B011 - assert-false
# RUF001 - ambiguous-unicode-character-string
"tests/*" = ["ANN001", "ANN102", "ANN2", "S101", "B011"]
"variation/schemas/*" = ["ANN001", "ANN201", "N805", "S101"]
"codebuild/*" = ["T201"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Query"]
