[metadata]
name = variation-normalizer
author = VICC
author_email = help@cancervariants.org
description = VICC normalization routine for variations
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/variation-normalization
license_files = LICENSE
license = MIT
project_urls =
    Changelog = https://github.com/cancervariants/variation-normalization/releases
    Source = https://github.com/cancervariants/variation-normalization
    Tracker = https://github.com/cancervariants/variation-normalization/issues

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True

install_requires =
    biocommons.seqrepo
    fastapi
    uvicorn
    pydantic ==2.*
    ga4gh.vrs[extras] ~= 2.0.0a2
    gene-normalizer ~=0.3.0.dev1
    boto3
    cool-seq-tool ~=0.4.0.dev1
    bioutils

tests_require =
    pytest
    pytest-cov
    pyyaml
    pytest-asyncio

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-cov
    ruff == 0.2.0
    pre-commit
    jupyter
    ipykernel
    psycopg2-binary

[tool:pytest]
addopts = --ignore setup.py --ignore=codebuild/ --doctest-modules --cov-report term-missing --cov .
